--- a/Avaliação/Estrutura/Login/login.html
+++ b/Avaliação/Estrutura/Login/login.html
@@ -13,6 +13,6 @@
         <img src="https://lumiere-a.akamaihd.net/v1/images/iron_man_marvel_d9ce0209.jpeg?region=36,0,713,399">
     </section>
     <br>
-    <a href="../Inicio/index.html">Voltar para o inicio</a>
+    <button class="btn"><a href="../Inicio/index.html">Voltar para o inicio</a></button>
 </body>
 </html>
